# LabVI

./: CMakeLists.txt
src/: main.cpp
src/controller/: controller.cpp  controller.hpp
src/serial/usr/local/: _setup_util.py
src/serial/usr/local/share/serial/cmake/: serialConfig.cmake
